# XDS-Power

./: CMakeLists.txt  Kconfig  nrf52840dk_nrf52840.overlay  prj.conf
src/: main.c
